test/trivial/diten/testIntExp4.good
testIntExp4.chpl:8: error: 0 cannot be raised to a negative power
